# worker_app

./: .gitignore  Cargo.toml  README.md  claude.md  package-lock.json  package.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts  stores.ts
apps/desktop/src/lib/components/: AgentSteps.svelte  ChatView.svelte  MemoriesDrawer.svelte  MessageBubble.svelte  MessageInput.svelte  ModelSwitcher.svelte  Sidebar.svelte  StatusBar.svelte  WorkspacePill.svelte
crates/co_worker_cli/: Cargo.toml
crates/co_worker_cli/src/: chat.rs  main.rs
crates/co_worker_client/: Cargo.toml
crates/co_worker_client/src/: lib.rs
crates/tauri-plugin-co-worker/: Cargo.toml  build.rs  package.json  tsconfig.json
crates/tauri-plugin-co-worker/guest-js/: index.ts
crates/tauri-plugin-co-worker/permissions/: default.toml
crates/tauri-plugin-co-worker/permissions/autogenerated/: reference.md
crates/tauri-plugin-co-worker/permissions/autogenerated/commands/: agent_continue.toml  agent_send.toml  create_memory.toml  debug_session.toml  get_auto_allow.toml  get_workspace.toml  list_memories.toml  model_catalog.toml  set_auto_allow.toml  set_workspace.toml  tool_append_file.toml  tool_create_dir.toml  tool_delete_path.toml  tool_list_dir.toml  tool_move_path.toml  tool_preview_write.toml  tool_read_file.toml  tool_run_command.toml  tool_search.toml  tool_write_file.toml
crates/tauri-plugin-co-worker/permissions/schemas/: schema.json
crates/tauri-plugin-co-worker/src/: commands.rs  error.rs  lib.rs  tools.rs  workspace.rs
src/: chat.rs  client.rs  types.rs
