[workspace]
resolver = "2"
members = [
    "crates/co_worker_client",
    "crates/co_worker_cli",
    "crates/tauri-plugin-co-worker",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
co_worker_client = { path = "crates/co_worker_client" }
tauri-plugin-co-worker = { path = "crates/tauri-plugin-co-worker" }

# Common deps pinned at the workspace level so every crate shares versions.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin = { version = "2" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
