[package]
name = "co_worker_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive terminal client for the co_worker_lite local LLM backend"

[[bin]]
name = "co_worker_cli"
path = "src/main.rs"

[dependencies]
co_worker_client = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

clap = { version = "4.6", features = ["derive", "env"] }
rustyline = "18"
colored = "3"
