[package]
name = "co_worker_client"
version = "0.1.0"
edition = "2024"
description = "Async HTTP client + wire types for the co_worker_lite backend"
license = "MIT OR Apache-2.0"

[lib]
name = "co_worker_client"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
